--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,20 +3,21 @@ project:
   output-dir: docs
 
 website:
-  title: "temp_website"
+  title: "JinKang Personal Website"
+  favicon: favicon.png
   navbar:
+    logo: imgs/logo.png
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - myProjects.qmd
+      - Experience.qmd
+      - Relection.qmd
 
 format:
   html:
-    theme:
-      - cosmo
-      - brand
+    theme: darkly
     css: styles.css
-    toc: true
 
 
 
